--- a/src/scss/_utilities.scss
+++ b/src/scss/_utilities.scss
@@ -28,7 +28,7 @@
     &::after {
         background-color: $accent;
         content: "";
-        width: 10rem;
+        width: 5rem;
         height: 2px;
         margin-top: 1rem;
     }
